# yolo-head-detection

./: .gitignore  Makefile  README.md  app.py  docker_req.txt  dockerfile  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  utils.py
.dvc/: config
.github/workflows/: ci.yaml  ci_cd.yaml
reports/: reg_details.json  run_info.json  test_results.json
reports/yolo8n-train/: args.yaml  results.csv
reports/yolov8n-head-detect/: args.yaml  results.csv
tests/: test_data_collection.py  test_data_validation.py  test_voc2yolo.py
yolo_head_detection/: __init__.py  config.py  dataset.py  features.py  plots.py
yolo_head_detection/data_utils/: __init__.py  data_collection.py  data_validation.py  voc2yolo.py
yolo_head_detection/experiments/: aug.py  cutmix.py  train_params.py
yolo_head_detection/modeling/: predict.py  prod.py  register.py  test.py  train.py
