[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yolo_head_detection"
version = "0.0.1"
description = "Human Head detection using Hollywood Heads and Yolov8"
authors = [
  { name = "Abhijith" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["yolo_head_detection"]
include = ["pyproject.toml", "yolo_head_detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["yolo_head_detection"]
force-sort-within-sections = true

